tests/elab/fail/let2.t20
;; Sequential let binding.

(: test (*))
(define test
  (let* ([x (,)]
         [y z] ;; `z' is not in scope at this point.
         [z x])
    z))
